# tts-eval

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/seedtts_en/: meta.lst
tts_eval/: __init__.py  config.example.yaml  evaluator.py  run_eval.py
tts_eval/core/: __init__.py  evaluator.py  run_eval.py
tts_eval/core/metrics/: __init__.py  emotion.py  speaker.py  wer.py
tts_eval/f5_seedtts/: __init__.py  ecapa_tdnn.py  eval.py  sim.py  utmos.py  wer.py
tts_eval/metrics/: __init__.py  emotion.py  speaker.py  wer.py
